# git_commit_gen

./: .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs
src/cli/: commands.rs
src/git/: mod.rs  ops.rs
src/gpt/: mod.rs  msg.rs
