[package]
name = "auto_git_commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = [] }
git2 = "0.18.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.3"
dotenv = "0.15"
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
log = "0.4.20"
env_logger = { version = "0.11.1", features = [] }
